Make to collapse to 10 lines if over 20 lines.(Fix #27)
Currently, collapse to 15 lines if status has more than 32 lines.
This commit makes to collapse to 10 lines if status has more than 20 lines.

--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -724,7 +724,7 @@
 }
 
 .status__content.status__content--collapsed {
-  max-height: 20px * 15; // 15 lines is roughly above 500 characters
+  max-height: 20px * 10; // 15 lines is roughly above 500 characters
 }
 
 .status__content__read-more-button {
